crates/parser/tests/parser/snapshots/main__parser__fixtures__basic_arithmetic.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: add
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 21
            - 22
        - name: y
          ty: ~
          mode: Consume
          span:
            - 24
            - 25
      constraints: []
      return_type: ~
      body:
        BinaryOp:
          op: Add
          lhs:
            Var:
              name: x
              span:
                - 29
                - 30
          rhs:
            Var:
              name: y
              span:
                - 33
                - 34
          span:
            - 29
            - 34
      doc: ~
      span:
        - 13
        - 34
  - DefFn:
      platform: ~
      name: sub
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 44
            - 45
        - name: y
          ty: ~
          mode: Consume
          span:
            - 47
            - 48
      constraints: []
      return_type: ~
      body:
        BinaryOp:
          op: Sub
          lhs:
            Var:
              name: x
              span:
                - 52
                - 53
          rhs:
            Var:
              name: y
              span:
                - 56
                - 57
          span:
            - 52
            - 57
      doc: ~
      span:
        - 36
        - 57
  - DefFn:
      platform: ~
      name: mul
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 67
            - 68
        - name: y
          ty: ~
          mode: Consume
          span:
            - 70
            - 71
      constraints: []
      return_type: ~
      body:
        BinaryOp:
          op: Mul
          lhs:
            Var:
              name: x
              span:
                - 75
                - 76
          rhs:
            Var:
              name: y
              span:
                - 79
                - 80
          span:
            - 75
            - 80
      doc: ~
      span:
        - 59
        - 80
  - DefFn:
      platform: ~
      name: div
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 90
            - 91
        - name: y
          ty: ~
          mode: Consume
          span:
            - 93
            - 94
      constraints: []
      return_type: ~
      body:
        BinaryOp:
          op: Div
          lhs:
            Var:
              name: x
              span:
                - 98
                - 99
          rhs:
            Var:
              name: y
              span:
                - 102
                - 103
          span:
            - 98
            - 103
      doc: ~
      span:
        - 82
        - 103
  - DefFn:
      platform: ~
      name: eq
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 112
            - 113
        - name: y
          ty: ~
          mode: Consume
          span:
            - 115
            - 116
      constraints: []
      return_type: ~
      body:
        BinaryOp:
          op: Eq
          lhs:
            Var:
              name: x
              span:
                - 120
                - 121
          rhs:
            Var:
              name: y
              span:
                - 125
                - 126
          span:
            - 120
            - 126
      doc: ~
      span:
        - 105
        - 126
  - DefFn:
      platform: ~
      name: neq
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 136
            - 137
        - name: y
          ty: ~
          mode: Consume
          span:
            - 139
            - 140
      constraints: []
      return_type: ~
      body:
        BinaryOp:
          op: Neq
          lhs:
            Var:
              name: x
              span:
                - 144
                - 145
          rhs:
            Var:
              name: y
              span:
                - 149
                - 150
          span:
            - 144
            - 150
      doc: ~
      span:
        - 128
        - 150
  - DefFn:
      platform: ~
      name: lt
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 159
            - 160
        - name: y
          ty: ~
          mode: Consume
          span:
            - 162
            - 163
      constraints: []
      return_type: ~
      body:
        BinaryOp:
          op: Lt
          lhs:
            Var:
              name: x
              span:
                - 167
                - 168
          rhs:
            Var:
              name: y
              span:
                - 171
                - 172
          span:
            - 167
            - 172
      doc: ~
      span:
        - 152
        - 172
  - DefFn:
      platform: ~
      name: gt
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 181
            - 182
        - name: y
          ty: ~
          mode: Consume
          span:
            - 184
            - 185
      constraints: []
      return_type: ~
      body:
        BinaryOp:
          op: Gt
          lhs:
            Var:
              name: x
              span:
                - 189
                - 190
          rhs:
            Var:
              name: y
              span:
                - 193
                - 194
          span:
            - 189
            - 194
      doc: ~
      span:
        - 174
        - 194
  - DefFn:
      platform: ~
      name: le
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 203
            - 204
        - name: y
          ty: ~
          mode: Consume
          span:
            - 206
            - 207
      constraints: []
      return_type: ~
      body:
        BinaryOp:
          op: Le
          lhs:
            Var:
              name: x
              span:
                - 211
                - 212
          rhs:
            Var:
              name: y
              span:
                - 216
                - 217
          span:
            - 211
            - 217
      doc: ~
      span:
        - 196
        - 217
  - DefFn:
      platform: ~
      name: ge
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 226
            - 227
        - name: y
          ty: ~
          mode: Consume
          span:
            - 229
            - 230
      constraints: []
      return_type: ~
      body:
        BinaryOp:
          op: Ge
          lhs:
            Var:
              name: x
              span:
                - 234
                - 235
          rhs:
            Var:
              name: y
              span:
                - 239
                - 240
          span:
            - 234
            - 240
      doc: ~
      span:
        - 219
        - 240
