crates/parser/tests/parser/snapshots/main__parser__fixtures__basic_function_def.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: untyped
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 25
            - 26
      constraints: []
      return_type: ~
      body:
        Var:
          name: x
          span:
            - 30
            - 31
      doc: ~
      span:
        - 13
        - 31
  - DefFn:
      platform: ~
      name: typed
      visibility: Private
      type_params: []
      params:
        - name: x
          ty:
            Named:
              name: Int
              span:
                - 46
                - 49
          mode: Consume
          span:
            - 43
            - 49
        - name: y
          ty:
            Named:
              name: Int
              span:
                - 54
                - 57
          mode: Consume
          span:
            - 51
            - 57
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 62
            - 65
      body:
        BinaryOp:
          op: Add
          lhs:
            Var:
              name: x
              span:
                - 68
                - 69
          rhs:
            Var:
              name: y
              span:
                - 72
                - 73
          span:
            - 68
            - 73
      doc: ~
      span:
        - 33
        - 73
  - DefFn:
      platform: ~
      name: no_args
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Lit:
          value:
            Int: 42
          span:
            - 91
            - 93
      doc: ~
      span:
        - 75
        - 93
