crates/parser/tests/parser/snapshots/main__parser__fixtures__basic_hello.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: main
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        App:
          func:
            Var:
              name: println
              span:
                - 26
                - 33
          args:
            - Lit:
                value:
                  Int: 42
                span:
                  - 34
                  - 36
          is_ufcs: false
          span:
            - 26
            - 37
      span:
        - 13
        - 37
