crates/parser/tests/parser/snapshots/main__parser__fixtures__basic_if_expr.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: simple_if
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 27
            - 28
      constraints: []
      return_type: ~
      body:
        If:
          cond:
            BinaryOp:
              op: Gt
              lhs:
                Var:
                  name: x
                  span:
                    - 35
                    - 36
              rhs:
                Lit:
                  value:
                    Int: 0
                  span:
                    - 39
                    - 40
              span:
                - 35
                - 40
          then_:
            Lit:
              value:
                Int: 1
              span:
                - 43
                - 44
          else_:
            Lit:
              value:
                Int: 0
              span:
                - 54
                - 55
          span:
            - 32
            - 57
      doc: ~
      span:
        - 13
        - 57
  - DefFn:
      platform: ~
      name: nested_if
      visibility: Private
      type_params: []
      params:
        - name: x
          ty: ~
          mode: Consume
          span:
            - 73
            - 74
      constraints: []
      return_type: ~
      body:
        If:
          cond:
            BinaryOp:
              op: Gt
              lhs:
                Var:
                  name: x
                  span:
                    - 81
                    - 82
              rhs:
                Lit:
                  value:
                    Int: 10
                  span:
                    - 85
                    - 87
              span:
                - 81
                - 87
          then_:
            Lit:
              value:
                String: big
              span:
                - 90
                - 95
          else_:
            If:
              cond:
                BinaryOp:
                  op: Gt
                  lhs:
                    Var:
                      name: x
                      span:
                        - 108
                        - 109
                  rhs:
                    Lit:
                      value:
                        Int: 0
                      span:
                        - 112
                        - 113
                  span:
                    - 108
                    - 113
              then_:
                Lit:
                  value:
                    String: small
                  span:
                    - 116
                    - 123
              else_:
                Lit:
                  value:
                    String: non-positive
                  span:
                    - 133
                    - 147
              span:
                - 105
                - 149
          span:
            - 78
            - 151
      doc: ~
      span:
        - 59
        - 151
