crates/parser/tests/parser/snapshots/main__parser__fixtures__basic_literals.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: int_lit
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Lit:
          value:
            Int: 42
          span:
            - 29
            - 31
      doc: ~
      span:
        - 13
        - 31
  - DefFn:
      platform: ~
      name: neg_int
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        BinaryOp:
          op: Sub
          lhs:
            Lit:
              value:
                Int: 0
              span:
                - 49
                - 50
          rhs:
            Lit:
              value:
                Int: 1
              span:
                - 53
                - 54
          span:
            - 49
            - 54
      doc: ~
      span:
        - 33
        - 54
  - DefFn:
      platform: ~
      name: float_lit
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Lit:
          value:
            Float: 3.14
          span:
            - 74
            - 78
      doc: ~
      span:
        - 56
        - 78
  - DefFn:
      platform: ~
      name: bool_true
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Lit:
          value:
            Bool: true
          span:
            - 98
            - 102
      doc: ~
      span:
        - 80
        - 102
  - DefFn:
      platform: ~
      name: bool_false
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Lit:
          value:
            Bool: false
          span:
            - 123
            - 128
      doc: ~
      span:
        - 104
        - 128
  - DefFn:
      platform: ~
      name: string_lit
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Lit:
          value:
            String: hello world
          span:
            - 149
            - 162
      doc: ~
      span:
        - 130
        - 162
  - DefFn:
      platform: ~
      name: unit_lit
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Lit:
          value: Unit
          span:
            - 181
            - 183
      doc: ~
      span:
        - 164
        - 183
